# shop

./: .gitignore  README.md
app/: Dockerfile  build.sh  cfg.yaml  docker-compose.yaml  pyproject.toml
app/src/: cli.py  config.py  database.py  deps.py  lib.py  main.py
app/src/models/core/: cart.py  commons.py  products.py
app/src/models/orm/: base.py  cart.py  products.py
app/src/models/schemas/: cart.py
app/src/repositories/: base.py  cart.py  products.py
app/src/routers/: __init__.py  cart.py  products.py
app/src/services/: base.py  calcuations.py  calculations.py  cart.py  products.py
app/src/services/calculations/: calculations.py  cart_calculator.py  rules.py
app/tests/: cfg.yaml  conftest.py  docker-compose.yaml  test.sh  test_cart.py  test_products.py
app/tests/integration/: conftest.py  test_cart.py  test_products.py
app/tests/unit/: test_cart.py
database/: init.sh
database/migrations/: default_products.sql  v1__init.sql
database/scripts/: init.sh
tests/integration/: conftest.py  test_cart.py  test_products.py
tests/unit/: test_cart.py
