[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["arsenron <arsenron@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "*"
fastapi = "0.75.0"
uvicorn = { version = "0.17.6", extras = ["standard"] }
pydantic = "1.9.0"
pyyaml = "6.0"
SQLAlchemy = "1.4.32"
asyncpg = "0.25.0"
pytest = "7.1.1"
pg8000 = "1.24.1"
requests = "2.27.1"
pytest-asyncio = "0.18.2"
black = "^22.1.0"
itsdangerous = "^2.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.poetry.scripts]
app = 'src.main:main'